--- a/thesis-a/report/pubs.bib
+++ b/thesis-a/report/pubs.bib
@@ -255,6 +255,18 @@
    url = "https://pittrasg.github.io/blog/2020/pmusarm/"
 }
 
+@online{BlogRedHatCpu,
+   author = "David Both",
+   title = "The central processing unit (CPU): Its components and functionality",
+   url = "https://www.redhat.com/sysadmin/cpu-components-functionality"
+}
+
+@online{BlogVentureBeat,
+   author = "Dean Takahashi",
+   title = "RISC-V grows globally as an alternative to Arm and its license fees",
+   url = "https://venturebeat.com/2019/12/11/risc-v-grows-globally-as-an-alternative-to-arm-and-its-license-fees/",
+}
+
 @online{GlossArmISA,
    author = "ARM",
    title = "Instruction Set Architecture (ISA)",
@@ -280,6 +292,5 @@
 }
 
 %% Not yet citated
-%% http://www.emerson.emory.edu/services/gcc/html/Extended_Asm.html
 %% https://pittrasg.github.io/blog/2020/pmusarm/
 %% https://developer.arm.com/documentation/ddi0464/f/ Armv7
