--- a/thesis-a/report/report-a.tex
+++ b/thesis-a/report/report-a.tex
@@ -19,7 +19,7 @@
 \usepackage{minted}
 \usepackage{multicol}
 \usepackage{listings}
-
+\usepackage[labelfont=bf]{caption}
 
 %% Thesis details
 \thesistitle{Profiling framework for seL4}
@@ -45,7 +45,7 @@
 
 %\include{abstract}
 \include{acknowledgements}
-\include{abbreviations}
+%\include{abbreviations}
 
 \tableofcontents
 %\listoffigures  % if required
